# ros_tutorials

1027_tutorial/: lecture.ipynb
1027_tutorial/aruco_broadcaster/: CMakeLists.txt  Readme.md  package.xml
1027_tutorial/aruco_broadcaster/config/: aruco_mapping.rviz  pl2esaii.yaml  tablesetup-ioc-aruco.yaml  tablesetup-ioc-calib.yaml  tablesetup-pl2esaii.yaml  tablesetup-pl2esaii_sim.yaml
1027_tutorial/aruco_broadcaster/include/: cameraposfinder.h  transformpool.h
1027_tutorial/aruco_broadcaster/launch/: aruco_broadcaster.launch  aruco_pl2.launch  data_storage.launch  prova_aruco.launch
1027_tutorial/aruco_broadcaster/src/: aruco_mapping.cpp  cameraposfinder.cpp  data_storage.cpp  tablecalibrator.cpp
1027_tutorial/aruco_ros/aruco/: CMakeLists.txt
1027_tutorial/gazebo_sensors_tutorial/: CMakeLists.txt  package.xml
1027_tutorial/gazebo_sensors_tutorial/config/: aruco_config.yaml  aruco_config_exercise6.yaml  aruco_config_exercise6_right.yaml  camera_aruco_cube-2.rviz  camera_aruco_cube-aruco_broadcaster.rviz  camera_coke2.rviz  chesslab_setup_onlycameras_exercise6.rviz  kinect_arm.rviz  kinect_coke.rviz
1027_tutorial/gazebo_sensors_tutorial/launch/: aruco_single.launch.xml  camera_aruco_cube_rviz-2.launch  camera_aruco_cube_rviz-aruco_broadcaster.launch  camera_coke_gazebo2.launch  camera_coke_rviz2.launch  camera_gazebo2.launch  camera_gazebo2_cubes.launch  cameras_chessboard.launch  cameras_chessboard_rosbag.launch  cameras_chessboard_rosbag_exercise_6a.launch  cameras_chessboard_rosbag_exercise_6b.launch  kinect_arm_rviz.launch  kinect_coke_gazebo2.launch  kinect_coke_rviz.launch
1027_tutorial/gazebo_sensors_tutorial/models/: README
1027_tutorial/gazebo_sensors_tutorial/models/camera-plugin/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
1027_tutorial/gazebo_sensors_tutorial/models/kinect-plugin/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
1027_tutorial/gazebo_sensors_tutorial/robot/: aruco_seven_dof_arm_with_rgbd.xacro  camera_left.urdf.xacro  camera_right.urdf.xacro
1027_tutorial/gazebo_sensors_tutorial/robot/sensors/: README_d415.txt  _d415.urdf.xacro  cam_holder.urdf.xacro
1027_tutorial/gazebo_sensors_tutorial/src/: aruco_frames_detection.cpp  perception.cpp
1027_tutorial/gazebo_sensors_tutorial/srv/: getpiecepose.srv
1027_tutorial/gazebo_sensors_tutorial/worlds/: camera2.world  camera2_cubes.world  camera_aruco_cube.world  camera_coke2.world  chesslab_simple.world  kinect_arm_aruco_cube.world  kinect_coke2.world
1027_tutorial/mastering_ros_robot_description_pkg/: urdf.rviz  urdf_arm_markers.rviz
1027_tutorial/mastering_ros_robot_description_pkg/launch/: view_arm.launch  view_demo.launch  view_mobile_robot.launch  view_pan_tilt_urdf.launch  view_pan_tilt_xacro.launch
1027_tutorial/mastering_ros_robot_description_pkg/urdf/: pan_tilt_complete.xacro  seven_dof_arm.urdf  seven_dof_arm.xacro
1027_tutorial/rrbot_description/launch/: rrbot_2.rviz  rrbot_rviz.launch  rrbot_rviz_2.launch
1027_tutorial/rrbot_gazebo/launch/: rrbot_world.launch  rrbot_world_2.launch
1027_tutorial/seven_dof_arm_gazebo_simple/: README.md
1027_tutorial/seven_dof_arm_gazebo_simple/config/: gazebo_ros_control_params.yaml
1027_tutorial/seven_dof_arm_gazebo_simple/launch/: seven_dof_arm_gazebo_control.launch  seven_dof_arm_gazebo_position.launch  seven_dof_arm_gazebo_states.launch  seven_dof_arm_with_rgbd_world.launch  seven_dof_arm_world.launch
actionlib_tutorials/: CMakeLists.txt
actionlib_tutorials/simple_action_servers/: maze_action_client.py  maze_action_server.py
client_cpp/launch/: client.launch
client_cpp/src/: client.cpp
client_py/: package.xml
gazebo_example/gazebo_example/: tutorial#1 (Lec#3).ipynb  tutorial#1 (Lec#4).ipynb
gazebo_example/gcamp_gazebo/: tutorial.ipynb
gazebo_example/gcamp_gazebo/urdf/: rb_diff_gazebo_plugin.xacro
gazebo_example/service_tutorial/src/: robot_turning_client.py  robot_turning_srv.py
listener_cpp/: CMakeLists.txt
listener_cpp/launch/: listener.launch
listener_py/: CMakeLists.txt
listener_py/scripts/: listener.py
moveit_tutorials/testbot_description/launch/: testbot.launch
moveit_tutorials/testbot_description/rviz/: testbot.rviz
moveit_tutorials/testbot_description/scripts/: joint_publish.py
moveit_tutorials/testbot_description/urdf/: testbot.urdf
moveit_tutorials/ur5e_moveit/: .setup_assistant  CMakeLists.txt  package.xml
moveit_tutorials/ur5e_moveit/config/: fake_controllers.yaml  gazebo_ur5e_robot.urdf  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  stomp_planning.yaml  ur5e_robot.srdf
moveit_tutorials/ur5e_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
moveit_tutorials/ur5e_moveit/script/: test.py
moveit_tutorials/ur_description/: CMakeLists.txt
moveit_tutorials/ur_description/launch/: load_ur5e.launch
moveit_tutorials/ur_description/urdf/: ur5e.urdf
server_cpp/: package.xml
server_cpp/launch/: server.launch
server_cpp/src/: server.cpp
server_py/: CMakeLists.txt
service_tutorials/client_cpp/: CMakeLists.txt  package.xml
service_tutorials/client_py/: CMakeLists.txt
service_tutorials/client_py/launch/: client.launch
service_tutorials/server_cpp/: CMakeLists.txt
service_tutorials/server_py/: package.xml
talker_py/: CMakeLists.txt
talker_py/launch/: talker.launch
topic_tutorials/listener_cpp/: package.xml
topic_tutorials/listener_py/: CMakeLists.txt  package.xml
topic_tutorials/listener_py/launch/: listener.launch
topic_tutorials/talker_cpp/: CMakeLists.txt  package.xml
topic_tutorials/talker_cpp/launch/: talker.launch
topic_tutorials/talker_py/: package.xml
(+14 files in other folders)
