<?xml version="1.0"?>
<package>
  <name>add_two_ints_client_cpp</name>
  <version>0.0.0</version>
  <description>add_two_ints_client_cpp</description>

  <maintainer email="kim87@khu.ac.kr">Sanghyun Kim</maintainer>
  <license>BSD</license>
  <author>Sanghyun Kim</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>add_two_ints_server_py</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>add_two_ints_server_py</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>